Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
 <li>In this lab, students can get first-hand experience on exploiting stack buffer-overflow vulnerability with different ROP techniques.</li>
 <li>In a series of stepwise challenges, students will meet different scenarios after finding out a stack overflow vulnerability, each requires different methods and skills to be exploited.</li>
 </ul>
+
+<hr>
+
+<ul>
+<li>To use this challenge sequence, please make sure you have set up the server <a href="https://github.com/nsslab-yin/SRCTF">framework</a>, then follow the instructions to import the challenge contents.</li>
+</ul>
       </section>
     </div>
 
